2009-01-15  Sam Weinig  <sam@webkit.org>

        Reviewed by Gavin Barraclough.

        Fix crash seen running fast/canvas.

        Make sure to mark the ScopeNode and CodeBlock being created
        in the re-parse for exception information.

        * bytecode/CodeBlock.cpp:
        (JSC::CodeBlock::reparseForExceptionInfoIfNecessary):
        * parser/Nodes.h:
        (JSC::ScopeNode::mark):
        * runtime/Collector.cpp:
        (JSC::Heap::collect):
        * runtime/JSGlobalData.cpp:
        (JSC::JSGlobalData::JSGlobalData):
        * runtime/JSGlobalData.h:

2009-01-15  Craig Schlenter  <craig.schlenter@gmail.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=23347
        Compilation of JavaScriptCore/wtf/ThreadingPthreads.cpp fails on Linux

        * wtf/ThreadingPthreads.cpp: included limits.h as INT_MAX is defined there.

2009-01-15  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff Garen.

        Bug 23225: REGRESSION: Assertion failure in reparseInPlace() (m_sourceElements) at sfgate.com
        <https://bugs.webkit.org/show_bug.cgi?id=23225> <rdar://problem/6487432>

        Character position for open and closing brace was incorrectly referencing m_position to
        record their position in a source document, however this is unsafe as BOMs may lead to
        m_position being an arbitrary position from the real position of the current character.

        * parser/Lexer.cpp:
        (JSC::Lexer::matchPunctuator):

2009-01-14  David Kilzer  <ddkilzer@apple.com>

        Bug 23153: JSC build always touches JavaScriptCore/docs/bytecode.html

        <https://bugs.webkit.org/show_bug.cgi?id=23153>

        Reviewed by Darin Adler.

        Instead of building bytecode.html into ${SRCROOT}/docs/bytecode.html, build it
        into ${BUILT_PRODUCTS_DIR}/DerivedSources/JavaScriptCore/docs/bytecode.html.

        Also fixes make-bytecode-docs.pl to actually generate documentation.
